{
  "version": 4,
  "terraform_version": "1.4.3",
  "serial": 44,
  "lineage": "8f8e22f4-2d2a-7ca1-1ae5-b31f9c1e2266",
  "resources": [
    {
      "module": "module.resources",
      "mode": "data",
      "type": "aws_lb_target_group",
      "name": "awsprod_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:456116895541:targetgroup/awsprod-lb-tg-6e2/bb578618e756038d",
            "arn_suffix": "targetgroup/awsprod-lb-tg-6e2/bb578618e756038d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:456116895541:targetgroup/awsprod-lb-tg-6e2/bb578618e756038d",
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "awsprod-lb-tg-6e2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06c9306932451d8ad"
          }
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_eip",
      "name": "awsprod_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d5f26ef0a4d756b",
            "domain": "vpc",
            "id": "eipalloc-02d5f26ef0a4d756b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-209-88-12.compute-1.amazonaws.com",
            "public_ip": "18.209.88.12",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "awsprod_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456116895541:internet-gateway/igw-05d6e3a0de8a23d1b",
            "id": "igw-05d6e3a0de8a23d1b",
            "owner_id": "456116895541",
            "tags": {
              "Name": "awsprod_igw"
            },
            "tags_all": {
              "Name": "awsprod_igw"
            },
            "vpc_id": "vpc-06c9306932451d8ad"
          },
          "dependencies": [
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_lb",
      "name": "awsprod_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:456116895541:loadbalancer/app/awsprod-loadbalancer/ed0c3a04999fc403",
            "arn_suffix": "app/awsprod-loadbalancer/ed0c3a04999fc403",
            "desync_mitigation_mode": "defensive",
            "dns_name": "awsprod-loadbalancer-1494059069.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:456116895541:loadbalancer/app/awsprod-loadbalancer/ed0c3a04999fc403",
            "idle_timeout": 400,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "awsprod-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dd79b62ba2ad590b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03295f11d6a8cc59c"
              },
              {
                "subnet_id": "subnet-090f64be492cfc8bf"
              }
            ],
            "subnets": [
              "subnet-03295f11d6a8cc59c",
              "subnet-090f64be492cfc8bf"
            ],
            "vpc_id": "vpc-06c9306932451d8ad",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.resources.aws_autoscaling_group.awsprod_app",
            "module.resources.aws_launch_template.awsprod_app",
            "module.resources.aws_lb_target_group.awsprod_tg",
            "module.resources.aws_security_group.awsprod_bastionhost_sg",
            "module.resources.aws_security_group.awsprod_frontend_app_sg",
            "module.resources.aws_security_group.awsprod_lb_sg",
            "module.resources.aws_subnet.awsprod_private_subnets",
            "module.resources.aws_subnet.awsprod_public_subnets",
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.data.aws_availability_zones.available",
            "module.resources.data.aws_lb_target_group.awsprod_tg",
            "module.resources.data.aws_ssm_parameter.aws-prod-ami",
            "module.resources.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "awsprod_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:456116895541:listener/app/awsprod-loadbalancer/ed0c3a04999fc403/7cac857ad991b25f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:456116895541:targetgroup/awsprod-lb-tg-6e2/bb578618e756038d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:456116895541:listener/app/awsprod-loadbalancer/ed0c3a04999fc403/7cac857ad991b25f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:456116895541:loadbalancer/app/awsprod-loadbalancer/ed0c3a04999fc403",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_autoscaling_group.awsprod_app",
            "module.resources.aws_launch_template.awsprod_app",
            "module.resources.aws_lb.awsprod_lb",
            "module.resources.aws_lb_target_group.awsprod_tg",
            "module.resources.aws_security_group.awsprod_bastionhost_sg",
            "module.resources.aws_security_group.awsprod_frontend_app_sg",
            "module.resources.aws_security_group.awsprod_lb_sg",
            "module.resources.aws_subnet.awsprod_private_subnets",
            "module.resources.aws_subnet.awsprod_public_subnets",
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.data.aws_availability_zones.available",
            "module.resources.data.aws_lb_target_group.awsprod_tg",
            "module.resources.data.aws_ssm_parameter.aws-prod-ami",
            "module.resources.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "awsprod_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:456116895541:targetgroup/awsprod-lb-tg-6e2/bb578618e756038d",
            "arn_suffix": "targetgroup/awsprod-lb-tg-6e2/bb578618e756038d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:456116895541:targetgroup/awsprod-lb-tg-6e2/bb578618e756038d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "awsprod-lb-tg-6e2",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06c9306932451d8ad"
          },
          "dependencies": [
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "awsprod_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d5f26ef0a4d756b",
            "association_id": "eipassoc-01c6ff2787f6b143a",
            "connectivity_type": "public",
            "id": "nat-08c6dfcadc5ed6946",
            "network_interface_id": "eni-028f4d443b076200e",
            "private_ip": "10.1.11.178",
            "public_ip": "18.209.88.12",
            "subnet_id": "subnet-03295f11d6a8cc59c"
          },
          "dependencies": [
            "module.resources.aws_eip.awsprod_nat_eip",
            "module.resources.aws_subnet.awsprod_public_subnets",
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.data.aws_availability_zones.available",
            "module.resources.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fa61201162524eb21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08c6dfcadc5ed6946",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fa61201162524eb2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_eip.awsprod_nat_eip",
            "module.resources.aws_nat_gateway.awsprod_ngw",
            "module.resources.aws_route_table.awsprod_private_rt",
            "module.resources.aws_subnet.awsprod_public_subnets",
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.data.aws_availability_zones.available",
            "module.resources.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route",
      "name": "default_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05d6e3a0de8a23d1b",
            "id": "r-rtb-08e217b9181a87c121080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08e217b9181a87c12",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_internet_gateway.awsprod_internet_gateway",
            "module.resources.aws_route_table.awsprod_public_rt",
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "awsprod_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456116895541:route-table/rtb-0fa61201162524eb2",
            "id": "rtb-0fa61201162524eb2",
            "owner_id": "456116895541",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "awsprod_private"
            },
            "tags_all": {
              "Name": "awsprod_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c9306932451d8ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "awsprod_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456116895541:route-table/rtb-08e217b9181a87c12",
            "id": "rtb-08e217b9181a87c12",
            "owner_id": "456116895541",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "awsprod_public"
            },
            "tags_all": {
              "Name": "awsprod_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c9306932451d8ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "awsprod_private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c93330ca689da40",
            "route_table_id": "rtb-0fa61201162524eb2",
            "subnet_id": "subnet-0536c952dc3465b6a"
          },
          "dependencies": [
            "module.resources.aws_route_table.awsprod_private_rt",
            "module.resources.aws_subnet.awsprod_private_subnets",
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.data.aws_availability_zones.available",
            "module.resources.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0383977e9659c500a",
            "route_table_id": "rtb-0fa61201162524eb2",
            "subnet_id": "subnet-0c40004a1ad2ca89f"
          },
          "dependencies": [
            "module.resources.aws_route_table.awsprod_private_rt",
            "module.resources.aws_subnet.awsprod_private_subnets",
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.data.aws_availability_zones.available",
            "module.resources.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "awsprod_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ce02c8c215395ca",
            "route_table_id": "rtb-08e217b9181a87c12",
            "subnet_id": "subnet-090f64be492cfc8bf"
          },
          "dependencies": [
            "module.resources.aws_route_table.awsprod_public_rt",
            "module.resources.aws_subnet.awsprod_public_subnets",
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.data.aws_availability_zones.available",
            "module.resources.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00272b69b62a0e669",
            "route_table_id": "rtb-08e217b9181a87c12",
            "subnet_id": "subnet-03295f11d6a8cc59c"
          },
          "dependencies": [
            "module.resources.aws_route_table.awsprod_public_rt",
            "module.resources.aws_subnet.awsprod_public_subnets",
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.data.aws_availability_zones.available",
            "module.resources.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "awsprod_backend_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456116895541:security-group/sg-08dae165548ea4483",
            "description": "Allow Inbound HTTP from FRONTEND APP, and SSH inbound traffic from Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08dae165548ea4483",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d0a46f5d5ca9bbf6"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0818ecde858e4a9e4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "awsprod_backend_app_sg",
            "name_prefix": "",
            "owner_id": "456116895541",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06c9306932451d8ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_security_group.awsprod_bastionhost_sg",
            "module.resources.aws_security_group.awsprod_frontend_app_sg",
            "module.resources.aws_security_group.awsprod_lb_sg",
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "awsprod_bastionhost_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456116895541:security-group/sg-0d0a46f5d5ca9bbf6",
            "description": "Allow SSH Inbound Traffic From Set IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d0a46f5d5ca9bbf6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "awsprod_bastionhost_sg",
            "name_prefix": "",
            "owner_id": "456116895541",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06c9306932451d8ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "awsprod_frontend_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456116895541:security-group/sg-0818ecde858e4a9e4",
            "description": "Allow SSH inbound traffic from Bastion, and HTTP inbound traffic from loadbalancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0818ecde858e4a9e4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d0a46f5d5ca9bbf6"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dd79b62ba2ad590b"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "awsprod_frontend_app_sg",
            "name_prefix": "",
            "owner_id": "456116895541",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06c9306932451d8ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_security_group.awsprod_bastionhost_sg",
            "module.resources.aws_security_group.awsprod_lb_sg",
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "awsprod_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456116895541:security-group/sg-0dd79b62ba2ad590b",
            "description": "Allow Inbound HTTP Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd79b62ba2ad590b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "awsprod_lb_sg",
            "name_prefix": "",
            "owner_id": "456116895541",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06c9306932451d8ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "awsprod_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456116895541:security-group/sg-0f5e507d11d850541",
            "description": "Allow MySQL Port Inbound Traffic from Backend App Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5e507d11d850541",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08dae165548ea4483"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "three-tier_rds_sg",
            "name_prefix": "",
            "owner_id": "456116895541",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06c9306932451d8ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resources.aws_security_group.awsprod_backend_app_sg",
            "module.resources.aws_security_group.awsprod_bastionhost_sg",
            "module.resources.aws_security_group.awsprod_frontend_app_sg",
            "module.resources.aws_security_group.awsprod_lb_sg",
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "awsprod_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456116895541:subnet/subnet-0536c952dc3465b6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0536c952dc3465b6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "456116895541",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "awsprod_private_1"
            },
            "tags_all": {
              "Name": "awsprod_private_1"
            },
            "vpc_id": "vpc-06c9306932451d8ad"
          },
          "dependencies": [
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.data.aws_availability_zones.available",
            "module.resources.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456116895541:subnet/subnet-0c40004a1ad2ca89f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c40004a1ad2ca89f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "456116895541",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "awsprod_private_2"
            },
            "tags_all": {
              "Name": "awsprod_private_2"
            },
            "vpc_id": "vpc-06c9306932451d8ad"
          },
          "dependencies": [
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.data.aws_availability_zones.available",
            "module.resources.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "awsprod_private_subnets_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456116895541:subnet/subnet-079be03ee7eb5a89c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.40.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-079be03ee7eb5a89c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "456116895541",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "awsprod_private_db1"
            },
            "tags_all": {
              "Name": "awsprod_private_db1"
            },
            "vpc_id": "vpc-06c9306932451d8ad"
          },
          "dependencies": [
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.data.aws_availability_zones.available",
            "module.resources.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456116895541:subnet/subnet-0de1ea333e15cc505",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.41.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de1ea333e15cc505",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "456116895541",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "awsprod_private_db2"
            },
            "tags_all": {
              "Name": "awsprod_private_db2"
            },
            "vpc_id": "vpc-06c9306932451d8ad"
          },
          "dependencies": [
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.data.aws_availability_zones.available",
            "module.resources.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "awsprod_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456116895541:subnet/subnet-090f64be492cfc8bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090f64be492cfc8bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "456116895541",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "awsprod_public_1"
            },
            "tags_all": {
              "Name": "awsprod_public_1"
            },
            "vpc_id": "vpc-06c9306932451d8ad"
          },
          "dependencies": [
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.data.aws_availability_zones.available",
            "module.resources.random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456116895541:subnet/subnet-03295f11d6a8cc59c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03295f11d6a8cc59c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "456116895541",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "awsprod_public_2"
            },
            "tags_all": {
              "Name": "awsprod_public_2"
            },
            "vpc_id": "vpc-06c9306932451d8ad"
          },
          "dependencies": [
            "module.resources.aws_vpc.awsprod_vpc",
            "module.resources.data.aws_availability_zones.available",
            "module.resources.random_integer.random"
          ]
        }
      ]
    },
    {
      "module": "module.resources",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "awsprod_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:456116895541:vpc/vpc-06c9306932451d8ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-010025811940f8def",
            "default_route_table_id": "rtb-09e2788fbb0677ab0",
            "default_security_group_id": "sg-0f319068756a25bce",
            "dhcp_options_id": "dopt-0a418893a52bca0a3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06c9306932451d8ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e2788fbb0677ab0",
            "owner_id": "456116895541",
            "tags": {
              "Name": "awsprod_vpc-32"
            },
            "tags_all": {
              "Name": "awsprod_vpc-32"
            }
          },
          "dependencies": [
            "module.resources.random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}